filling in html and stlye

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css">
+        <title>Aemula</title>
     </head>
+    <nav>
+        <h1 class="navtitle">Aemula</h1>
+        <ul class="navlist">
+            <li>About</li>
+            <li>Join</li>
+            <li>Donate</li>
+        </ul>
+    </nav>
+    <body>
+        <h1>Aemula</h1>
+    </body>
 </html>
-<h1>Aemula</h1>
