--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </ul>
     </nav>
     <body>
-        <h1>Aemula</h1>
+        <div class = 'maintitle'>
+            <h1>Aemula</h1>
+        </div>
     </body>
 </html>
