section sizing test

--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
         <div class = 'maintitle'>
             <h1>Aemula</h1>
         </div>
+        <div class = 'about'>
+
+        </div>
+        <div class = 'join'>
+
+        </div>
+        <div class = 'donate'>
+            
+        </div>
     </body>
 </html>
