--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <body>
         <div class = 'maintitle'>
             <h1>Aemula</h1>
+            <script src="three.r134.min.js"></script>
+            <script src="vanta.net.min.js"></script>
+            <script>
+                VANTA.NET({
+                el: "#maintitle",
+                mouseControls: true,
+                touchControls: true,
+                gyroControls: false,
+                minHeight: 200.00,
+                minWidth: 200.00,
+                scale: 1.00,
+                scaleMobile: 1.00,
+                points: 20.00,
+                maxDistance: 23.00,
+                spacing: 16.00
+                })
+            </script>
         </div>
         <div class = 'about'>
 
@@ -23,7 +40,7 @@
 
         </div>
         <div class = 'donate'>
-            
+
         </div>
     </body>
 </html>
