--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <body>
         <div class = 'maintitle'>
             <h1>Aemula</h1>
-            <script src="three.r134.min.js"></script>
-            <script src="vanta.net.min.js"></script>
+            <script src=https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js></script>
+            <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
             <script>
                 VANTA.NET({
                 el: "#maintitle",
