--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <body>
         <div class = 'maintitle'>
             <h1>Aemula</h1>
-            <script src=https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js></script>
-            <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/"></script>
+            <script src="three.r134.min.js"></script>
+            <script src="vanta.net.min.js"></script>
             <script>
                 VANTA.NET({
                 el: "#maintitle",
@@ -27,6 +28,8 @@
                 minWidth: 200.00,
                 scale: 1.00,
                 scaleMobile: 1.00,
+                color: 0xafafaf,
+                backgroundColor: 0x110f11,
                 points: 20.00,
                 maxDistance: 23.00,
                 spacing: 16.00
