--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </ul>
     </nav>
     <body>
-        <div class = 'maintitle'>
+        <div id="vanta-canvas" class = 'maintitle'>
             <h1>Aemula</h1>
             <script src="three.r134.min.js"></script>
             <script src="vanta.net.min.js"></script>
             <script>
                 VANTA.NET({
-                el: "#maintitle",
+                el: "#vanta-canvas",
                 mouseControls: true,
                 touchControls: true,
                 gyroControls: false,
