--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <script>
                 VANTA.NET({
                   el: "#vanta-canvas",
-                  mouseControls: false,
-                  touchControls: false
+                  mouseControls: true,
+                  touchControls: true,
                   gyroControls: false,
                   minHeight: 200.00,
                   minWidth: 200.00,
