favicon real fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css">
-        <link rel="'icon" href="./public/img/aemulaFavicon.png">
+        <link rel="icon" href="./public/img/aemulaFavicon.png">
         <title>Aemula</title>
     </head>
     <nav>
