--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/vendor/three.r134.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.net.min.js"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+
 <html>
     <head>
         <link rel="stylesheet" href="./style.css">
         <link rel="icon" href="./public/img/aemulaFavicon.png">
+        <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/vendor/three.r134.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.24/dist/vanta.net.min.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sofia+Sans&display=swap" rel="stylesheet">
         <title>Aemula</title>
     </head>
     <nav>
@@ -21,6 +25,7 @@
     <body>
         <div id="vanta-canvas" class = 'maintitle'>
             <h1>Aemula</h1>
+            <h2>A truly decentralized, DAO-moderated, subscription journalism platform incentivizing the sharing of unbiased, diverse, and high-quality information.</h2>
             <script>
                 VANTA.NET({
                   el: "#vanta-canvas",
