--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <h1 class="navtitle">Aemula</h1>
         <ul class="navlist">
-            <li>About</li>
+            <li><a href='#about'>About</a></li>
             <li>Join</li>
             <li>Donate</li>
         </ul>
