--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <h1 class="navtitle">Aemula</h1>
         <ul class="navlist">
-            <li><a href='#about'>About</a></li>
+            <li><a href='#aboutSection'>About</a></li>
             <li>Join</li>
             <li>Donate</li>
         </ul>
@@ -44,13 +44,13 @@
                 })
             </script>
         </div>
-        <div class = 'about'>
+        <div id='aboutSection' class='about'>
 
         </div>
-        <div class = 'join'>
+        <div class='join'>
 
         </div>
-        <div class = 'donate'>
+        <div class='donate'>
 
         </div>
     </body>
