--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Aemula</title>
     </head>
     <nav>
-        <h1 class="navtitle"><a href='.maintitle'>Aemula</a></h1>
+        <h1 class="navtitle"><a class='navtitleLink' href='.maintitle'>Aemula</a></h1>
         <ul class="navlist">
             <li><a href='#aboutSection'>About</a></li>
             <li>Join</li>
