--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <title>Aemula</title>
     </head>
     <nav>
-        <h1 class="navtitle"><a class='navtitleLink' href='maintitle'>Aemula</a></h1>
+        <h1 class="navtitle"><a class='navtitleLink' href='#maintitleSection'>Aemula</a></h1>
         <ul class="navlist">
             <li><a href='#aboutSection'>About</a></li>
             <li>Join</li>
@@ -23,12 +23,12 @@
         </ul>
     </nav>
     <body>
-        <div id="vanta-canvas" class = 'maintitle'>
+        <div id="maintitleSection" class = 'maintitle'>
             <h1>Aemula</h1>
             <h2>A truly decentralized, DAO-moderated, subscription journalism platform incentivizing the sharing of unbiased, diverse, and high-quality information.</h2>
             <script>
                 VANTA.NET({
-                  el: "#vanta-canvas",
+                  el: "#maintitleSection",
                   mouseControls: true,
                   touchControls: true,
                   gyroControls: false,
