--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1 class="navtitle"><a class='navtitleLink' href='#maintitleSection'>Aemula</a></h1>
         <ul class="navlist">
             <li><a href='#aboutSection'>About</a></li>
-            <li>Join</li>
-            <li>Donate</li>
+            <li><a href='#joinSection'>Join</a></li>
+            <li><a href='#donateSection'>Donate</a></li>
         </ul>
     </nav>
     <body>
@@ -47,10 +47,10 @@
         <div id='aboutSection' class='about'>
 
         </div>
-        <div class='join'>
+        <div id='joinSection' class='join'>
 
         </div>
-        <div class='donate'>
+        <div id='donateSection' class='donate'>
 
         </div>
     </body>
