--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
             </script>
         </div>
         <div id='aboutSection' class='about'>
-
+            <h1>"stimulos dedit aemula virtus"</h1>
+            <h2>rivalry in excellence spurs (them) on</h2>
+            <p>
+                <ol>
+                    <li>read articles - machine learning algorithm orders feed with intent of promoting diverse and moderate viewpoints</li>
+                    <li>write articles - get paid for each person in agreement</li>
+                    <li>moderate articles - join the DAO and earn rewards for moderating content</li>
+                    <li>truly decentralized - no centralized control of content flow or data storage</li>
+                </ol>
+            </p>
         </div>
         <div id='joinSection' class='join'>
 
