--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             </script>
         </div>
         <div id='aboutSection' class='about'>
+            <p class="textbox">
             <h1>"stimulos dedit aemula virtus"</h1>
             <h2>rivalry in excellence spurs (them) on</h2>
-            <p>
                 <ol>
                     <li>read articles - machine learning algorithm orders feed with intent of promoting diverse and moderate viewpoints</li>
                     <li>write articles - get paid for each person in agreement</li>
