--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </script>
         </div>
         <div id='aboutSection' class='about'>
-            <p class="textbox">
+            <div class="textbox">
             <h1>"stimulos dedit aemula virtus"</h1>
             <h2>rivalry in excellence spurs (them) on</h2>
                 <ol>
@@ -54,7 +54,7 @@
                     <li>moderate articles - join the DAO and earn rewards for moderating content</li>
                     <li>truly decentralized - no centralized control of content flow or data storage</li>
                 </ol>
-            </p>
+            </div>
         </div>
         <div id='joinSection' class='join'>
 
