--- a/index.html
+++ b/index.html
@@ -46,18 +46,29 @@
         </div>
         <div id='aboutSection' class='about'>
             <div class="textbox">
-            <h1>"stimulos dedit aemula virtus"</h1>
-            <h2>rivalry in excellence spurs (them) on</h2>
-                <ol>
-                    <li>read articles - machine learning algorithm orders feed with intent of promoting diverse and moderate viewpoints</li>
-                    <li>write articles - get paid for each person in agreement</li>
-                    <li>moderate articles - join the DAO and earn rewards for moderating content</li>
-                    <li>truly decentralized - no centralized control of content flow or data storage</li>
-                </ol>
+                <h1>"stimulos dedit aemula virtus"</h1>
+                <h2>rivalry in excellence spurs (them) on</h2>
+                    <ol>
+                        <li>read articles - machine learning algorithm orders feed with intent of promoting diverse and moderate viewpoints</li>
+                        <li>write articles - get paid for each person in agreement</li>
+                        <li>moderate articles - join the DAO and earn rewards for moderating content</li>
+                        <li>truly decentralized - no centralized control of content flow or data storage</li>
+                    </ol>
             </div>
         </div>
         <div id='joinSection' class='join'>
-
+            <div class="textbox">
+                <h1>Join the Team</h1>
+                <p>
+                    Web3 developers, team leads, and designers needed.
+                </p> 
+                <p>
+                    Email us directly for more information.
+                </p>
+                <p class="pEmail">
+                    dt@aemu.la
+                </p>
+            </div>
         </div>
         <div id='donateSection' class='donate'>
 
