removing p and adding divs instead

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
         <div id='joinSection' class='join'>
             <div class="textbox">
                 <h1>Join the Team</h1>
-                <p>
+                <div class="pp">
                     Web3 developers, team leads, and designers needed.
-                </p> 
-                <p>
+                </div> 
+                <div class="pp">
                     Email us directly for more information.
-                </p>
-                <p class="pEmail">
+                </div>
+                <div class="pEmail">
                     dt@aemu.la
-                </p>
+                </div>
             </div>
         </div>
         <div id='donateSection' class='donate'>
