--- a/index.html
+++ b/index.html
@@ -74,4 +74,15 @@
 
         </div>
     </body>
+    <footer>
+        <div>
+            <h2>Copyright Aemula 2023</h2>
+        </div>
+        <div>
+            <h1>For more information, email dt@aemu.la</h1>
+        </div>
+        <div>
+            <h2>Donate to the cause: aemula.eth</h2>
+        </div>
+    </footer>
 </html>
