footer edits and commenting out sections

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 })
             </script>
         </div>
+        <!--
         <div id='aboutSection' class='about'>
             <div class="textbox">
                 <h1>"stimulos dedit aemula virtus"</h1>
@@ -73,15 +74,16 @@
         <div id='donateSection' class='donate'>
 
         </div>
+        -->
     </body>
     <footer>
-        <div>
+        <div class="copyright">
             <h2>Copyright Aemula 2023</h2>
         </div>
-        <div>
+        <div class='email'>
             <h1>For more information, email dt@aemu.la</h1>
         </div>
-        <div>
+        <div class="donation address">
             <h2>Donate to the cause: aemula.eth</h2>
         </div>
     </footer>
