--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class='email'>
             <h1>For more information, email dt@aemu.la</h1>
         </div>
-        <div class="donation address">
+        <div class="donation">
             <h2>Donate to the cause: aemula.eth</h2>
         </div>
     </footer>
