aemula.eth link addition

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h1>For more information, email dt@aemu.la</h1>
         </div>
         <div class="donation">
-            <h2>Donate to the cause: aemula.eth</h2>
+            <h2><a target="_blank" rel="noopener noreferrer" href="https://etherscan.io/address/0x1862d73598b55ad5e27676402bff0043a53fed37">Donate to the cause: aemula.eth</a></h2>
         </div>
     </footer>
 </html>
