update to subtitle

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <body>
         <div id="maintitleSection" class = 'maintitle'>
             <h1>Aemula</h1>
-            <h2>A truly decentralized, DAO-moderated, subscription journalism platform incentivizing the sharing of unbiased, diverse, and high-quality information.</h2>
+            <h2>Rivalry in excellence spurs them on.</h2>
             <script>
                 VANTA.NET({
                   el: "#maintitleSection",
